--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -3,11 +3,9 @@ body{
     padding: 0;
 }
 
-.top__container {
-    display: flex;
+.notes__top__container {
     justify-content: center;
     align-items: center;
-    flex-direction: column;
 }
 
 .iPrep__img {
@@ -15,7 +13,7 @@ body{
     margin-left: 610px;
 }
 
-.active {
+.notes_back {
     width: 35px;
     height: 35px;
     display: flex;
@@ -23,10 +21,10 @@ body{
     margin-left: 144px;
 }
 
-.span__text {
+.notes__upload__text {
     width: 222px;
     height: 27px;
-    margin-left: 609px;
+    margin-left: 619px;
     margin-top: 168px;
     font-family: sans-serif;
     font-style: normal;
@@ -45,12 +43,12 @@ hr {
     border: 1px solid #DEDEDE;
 }
 
-.middle__container {
+.notes__middle__container {
     display: flex;
     flex-flow: row wrap;
 }
 
-#single__upload {
+#notes_single_upload {
     width: 270px;
     height: 56px;
     cursor: pointer;
@@ -64,7 +62,7 @@ hr {
     justify-content: flex-start;
 }
 
-#single__upload:hover {
+#notes_single_upload:hover {
     border-color: #0077FF;
 }
 
@@ -78,7 +76,7 @@ hr {
 
 .single__assessment__text {
     height: 22px;
-    margin-left: 11px;
+    margin-left: 20px;
     margin-top: 17px;
     font-family: sans-serif;
     font-style: normal;
@@ -89,7 +87,7 @@ hr {
     color: #64748B;
 }
 
-#bulk__upload {
+#notes_bulk_upload {
     width: 270px;
     height: 56px;
     cursor: pointer;
@@ -103,11 +101,11 @@ hr {
     justify-content: flex-start;
 }
 
-#bulk__upload:hover {
+#notes_bulk_upload:hover {
     border-color: #0077FF;
 }
 
-.bulk__assessment__logo {
+.bulk_notes_assessment_logo {
     width: 42.7px;
     height: 34px;
     margin-left: 24px;
@@ -115,9 +113,9 @@ hr {
     margin-bottom: 11px;
 }
 
-.bulk__assessment__text {
+.bulk_notes_assessment_text {
     height: 22px;
-    margin-left: 11px;
+    margin-left: 20px;
     margin-top: 17px;
     font-family: sans-serif;
     font-style: normal;
@@ -128,7 +126,7 @@ hr {
     color: #64748B;
 }
 
-.middle__hr {
+.middle_notes_hr {
     width: 1152px;
     height: 0px;
     margin-left: 144px;
@@ -136,12 +134,12 @@ hr {
     border: 1px solid #DEDEDE;
 }
 
-.bottom__container {
+.notes_bottom_container {
     display: flex;
     flex-flow: row wrap;
 }
 
-.bottom__text {
+.notes_instruction_text, .notes_history_text {
     width: 75px;
     height: 27px;
     margin-left: 144px;
@@ -155,77 +153,28 @@ hr {
     justify-content: flex-start;
 }
 
-.history__box {
+.notes_instruction_box {
     width: 1152px;
-    height: 70px;
-    padding: 0px 0px 0px 20px;
+    height: 154px;
     margin-left: 144px;
-    margin-bottom: 242px;
+    margin-top: 18px;
     background: #F8F8F8;
     border-radius: 10px;
 }
 
-.tableRow{
-    margin-top: 20px;
-}
-
-#tableDiv{
-    display: flex;
-    justify-content: center;
-}
-
-#tbody{
+.notes_history_box{
+    width: 1152px;
+    height: 101px;
     margin-left: 144px;
-    display: flex;
-    flex-flow:column;
-    align-items: center;
+    margin-top: 18px;
+    background: #F8F8F8;
+    border-radius: 10px;
+    margin-bottom: 70px;
 }
-
-.assessment_time_stamp{
-    width: 86px;
-    height: 19px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    color: #475569;
-    margin-top: 79px;
-}
-
-.assessment_name, .assessment_link{
-    width: 86px;
-    height: 19px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    color: #475569;
-    margin-top: 79px;
-    margin-left: 260px;
-}
-
-.assessment_link {
-    width: 86px;
-    height: 19px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    color: #475569;
-    margin-top: 79px;
-    margin-left: 295px;
-}
-
 
 
 /* The Modal (background) */
-.modal {
+.notes_modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -240,7 +189,7 @@ hr {
 }
   
 /* Modal Content */
-.modal-content {
+.notes_modal_content {
     background-color: #fefefe;
     left: 50%;
     top: 50%;
@@ -248,41 +197,38 @@ hr {
     transform: translate(-50%, -50%);
     padding: 20px;
     border: 1px solid #888;
-    width: 530px;
+    width: 564px;
     border-radius: 20px;
 }
   
 /* The Close Button */
-.close {
+.notes_close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
   
-.close:hover,
-.close:focus {
+.notes_close:hover,
+.notes_close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
 }
 
-
-
-.close-div {
+.notes_close_div {
 	display: flex;
     flex-flow: column wrap;
     align-content: flex-end;
 }
 
-
-.form-text {
+.notes_form_text {
 	display: flex;
     justify-content: center;
     align-items: center;
 	width: 262px;
     height: 24px;
-    margin-left: 130px;
+    margin-left: 141px;
     font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -292,21 +238,21 @@ hr {
     color: #64748B;
 }
 
-.form-div {
+.notes_form_div {
 	display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.form-container {
-	width: 530px;   
+.notes_form_container {
+	width: 564px;   
     left: 438px;
     top: 225px;
     background: #FFFFFF;
 }
 
-.select-div {
+.notes_select_div {
 	display: flex;
     align-items: center;
     flex-flow: column wrap;
@@ -329,7 +275,7 @@ hr {
     color: #94A3B8;
 }
 
-.common {
+.notes_common {
     margin-top: 40px;
     width: 368px;
     height: 56px;
@@ -345,13 +291,12 @@ hr {
     color: #94A3B8;
 }
 
-.btn {
+.notes_btn {
+    margin-top: 40px;
+    margin-bottom: 30px;
+    margin-left: 98px;
     width: 368px;
     height: 56px;
-    cursor: pointer;
-    margin-top: 40px;
-    margin-left: 82px;
-    margin-bottom: 30px;
     font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -364,13 +309,12 @@ hr {
     border: 2px solid #0077FF;
 }
 
-.btn:hover{
+.notes_btn:hover{
     border-color: #64748B;
 }
 
-
 /* The Bulk Modal (Background)*/
-.bulkModal {
+.notes-bulk-modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -385,7 +329,7 @@ hr {
 }
   
 /* Modal Content */
-.bulk-modal-content {
+.notes-bulk-modal-content {
     background-color: #fefefe;
     left: 50%;
     top: 50%;
@@ -398,30 +342,27 @@ hr {
 }
   
 /* The Close Button */
-.bulk-modal-close {
+.notes-bulk-modal-close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
   
-.bulk-modal-close:hover,
-.bulk-modal-close:focus {
+.notes-bulk-modal-close:hover,
+.notes-bulk-modal-close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
 }
 
-
-
-.bulk-modal-close-div {
+.notes-bulk-modal-close-div {
 	display: flex;
     flex-flow: column wrap;
     align-content: flex-end;
 }
 
-
-.bulk-modal-form-text {
+.notes-bulk-modal-form-text {
 	display: flex;
     justify-content: center;
     align-items: center;
@@ -437,165 +378,63 @@ hr {
     color: #64748B;
 }
 
-.bulk-modal-form-div {
+.notes-bulk-modal-form-div {
 	display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.bulk-modal-form-container {
+.notes-bulk-modal-form-container {
 	width: 500px;   
     left: 438px;
     top: 225px;
     background: #FFFFFF;
 }
 
-.bulk-modal-select-div {
+.notes-bulk-modal-select-div {
 	display: flex;
     align-items: center;
     flex-flow: column wrap;
     margin-top: 30px;
 }
 
-#bulkModalBoard {
+#notesBulkModalBoard {
     margin-top: 10px;
     width: 368px;
     height: 56px;
     border: 1px solid #CBD5E1;
-    box-sizing: border-box;
     border-radius: 8px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
     text-align: center;
     color: #94A3B8;
 }
 
-.bulk-modal-common {
+.notes-bulk-modal-common {
     margin-top: 40px;
     width: 368px;
     height: 56px;
     border: 1px solid #CBD5E1;
-    box-sizing: border-box;
     border-radius: 8px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
     text-align: center;
     color: #94A3B8;
 }
 
-.bulk-modal-btn {
-    margin-top: 40px;
-    margin-left: 66px;
-    margin-bottom: 40px;
+.notes-bulk-modal-btn {
     width: 368px;
     height: 56px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    cursor: pointer;
+    margin-top: 40px;
+    margin-left: 66px;
+    margin-bottom: 20px;
     font-size: 18px;
-    line-height: 22px;
-    text-align: center;
     color: white;
     background: #0077FF;
     border-radius: 8px;
     border: 2px solid #0077FF;
 }
 
-.bulk-modal-btn:hover{
+.notes-bulk-modal-btn:hover{
     border-color: #64748B;
-}
-
-/* CSS For Dynamic questions display */
-
-
-.question_area {
-    width: 1050px;
-    height: 107px;
-    background: #FAFAFA;
-    border-radius: 20px;
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    margin-top: 2rem;
-}
-
-.option_area{
-    width: 1050px;
-    height: 300px;
-    background: #FAFAFA;
-    border-radius: 20px;
-    margin-top: 15px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    overflow-y: auto;
-}
-
-.question_num {
-    border-radius: 100%;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #334155;
-    margin-left: 40px;
-}
-
-.question {
-    border-style: none;
-    width: 640px;
-    height: 40px;
-    margin-left: 30px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    color: #475569;
-    background-color: #FAFAFA;
-}
-
-.option {
-    border-style: none;
-    width: 640px;
-    height: 40px;
-    margin-left: 30px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    color: #475569;
-    background-color: #FAFAFA;
-}
-
-.quesImage {
-    margin-left: 32px;
-}
-
-.optImage {
-    margin-left: 32px;
-}
-
-img[src=""] {
-    display: none;
-}
-
-input[value=""]{
-    display: none;
-}
-
-.opt_a, .opt_b, .opt_c,  .opt_d{
-    margin-bottom: 20px;
 }
