--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -44,7 +44,7 @@ body {
     height: 116px;
     left: 536px;
     top: 286px;
-    border: 2px solid #0077FF;
+    border: 2px solid #E2E8F0;
     box-sizing: border-box;
     border-radius: 12px;
     display: flex;
@@ -53,10 +53,15 @@ body {
     margin-bottom: 53px;
 }
 
+#text__assessment:hover {
+    border-color: #0077FF;
+}
+
 #text__span {
     border-style: none;
     width: 182px;
     height: 22px;
+    cursor: pointer;
     background: #FFFFFF;
     font-family: sans-serif;
     font-style: normal;
@@ -64,7 +69,7 @@ body {
     font-size: 17px;
     line-height: 22px;
     text-align: center;
-    color: #0077FF;
+    color: #64748B;
 }
 
 #video__assessment {
@@ -92,6 +97,7 @@ body {
     border-style: none;
     width: 168px;
     height: 22px;
+    cursor: pointer;
     background: #FFFFFF;
     text-align: center;
     font-family: sans-serif;
@@ -127,6 +133,7 @@ body {
     border-style: none;
     width: 168px;
     height: 22px;
+    cursor: pointer;
     background: #FFFFFF;
     text-align: center;
     font-family: sans-serif;
