add functionality to update assessments using topic id and question id and included button to remove extra assessment

--- a/views/assessment-bulk-upload.ejs
+++ b/views/assessment-bulk-upload.ejs
@@ -88,9 +88,9 @@
             </div>
             <div class="create-assessment-modal-body">
                 <span id="ImgProgress"></span>
-                <span id="textSpan"></span>
+                <!-- <span id="textSpan"></span>
                 <span id="successMsg"></span>
-                <span id="err"></span>
+                <span id="err"></span> -->
             </div>
             <div class="create-assessment-bottom-div">
                 <button id="reUploadBtn" class="reUpload">Re-Upload</button>
